restauth-common 0.5.1 (XX XX 20XX)

  * setup.py now cleans *all* generated files
  * fix setup.py file in Python3 file (previously it threw an exception)
  * Handle version in a more consistant manner
  * This package is now included in PyPI
  * Use the most compact JSON representation

restauth-common 0.5.0 (29 August 2011)

  * Initial version based on version 0.5 of the RestAuth protocol.